# GRUPO_3

./: .dockerignore  .env.docker.example  .gitignore  13_conclusiones.md  AGENTS.md  Caddyfile  DEPLOYMENT.md  PRD_sistema_priorizacion_cobranzas.md  README.md  analisis_etico_proyecto.md  docker-compose.yml  modelado_analisis_comparativo_ampliado.md  project_paths.py  render.yaml  requirements.txt  run_pipeline.ps1
0 Creación de datos/: simulación_datos.ipynb
01_generacion/: contexto_generacion_datos.md  correcion_aplicada.md  simulacion_datos.ipynb  simulación_datos.ipynb
02_eda/: EDA_cobranzas.ipynb  notebook_eda_cobranzas.ipynb  reporte_academico_eda_cobranzas.md
03_preparacion/: notebook_preparacion.ipynb  notebook_preparación.ipynb  reporte_preparacion.md
04_evaluacion_modelos_ia/: clustering_clientes_cobranzas.py  contrato_front_prediccion.md  evaluacion_modelos_cobranzas.py  exploracion_predicciones_cobranzas.py  guia_predicciones_cobranzas.md  notebook_evaluacion_modelos.ipynb  (+2 more)
EDA/: EDA_cobranzas.ipynb
backend/: API.md  Dockerfile  REGLAS_ACCIONES_SUGERIDAS.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/scripts/: __init__.py  init_db.py
backend/app/services/: __init__.py  feature_builder.py  import_service.py  operations_service.py  prediction_service.py  recommendation_service.py
backend/tests/: test_operational_api.py  test_prediction_against_existing.py
(+166 files in other folders)
